<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.smarthome.menthacontrols.menthapp_client_new.activities.StatusActivity">
    <!--<item-->
        <!--android:id="@+id/action_status"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_settings"/>-->

    <item
        android:id="@+id/live_view"
        android:title="@string/live_view"/>

    <item
        android:id="@+id/status_view"
        android:title="@string/status_view"/>

    <item
        android:id="@+id/login_view"
        android:title="@string/login"/>

    <item
        android:id="@+id/settings_view"
        android:title="@string/settings"/>
</menu>
