<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smarthome.menthacontrols.menthaapp.activities.LivingRoomActivity">

    <Button
        android:id="@+id/buttonBedroom"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:onClick="changeToBedroom"
        android:text="@string/bedroom_button"
        app:layout_constraintRight_toLeftOf="@+id/buttonUpstairs"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonUpstairs"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:onClick="changeToUpstairs"
        android:text="@string/upstairs_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/buttonGarage"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:onClick="changeToGarage"
        android:text="@string/garage_button"
        app:layout_constraintLeft_toRightOf="@+id/buttonUpstairs"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="9dp"
        android:background="@android:color/darker_gray"
        android:onClick="changeToUtilities"
        android:text="@string/utilities_button"
        app:layout_constraintLeft_toRightOf="@+id/buttonGarage"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="changeToLivingroom"
        android:text="@string/living_room_button"
        app:layout_constraintRight_toLeftOf="@+id/buttonBedroom"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/livingroom_background"
        android:layout_width="780dp"
        android:layout_height="390dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="160dp"
        android:contentDescription="@string/livingroom_description"
        android:scaleType="fitXY"
        android:src="@drawable/livingroom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUpstairs"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <!--<com.example.buttontest.ColoredButton-->
    <com.smarthome.menthacontrols.menthapp_client_new.model.ColoredButton
        android:id="@+id/btnRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Red"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnGreen"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="411dp" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.ColoredButton
        android:id="@+id/btnGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Green"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/btnRed"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="289dp"
        android:layout_marginTop="159dp"
        android:layout_marginStart="289dp" />

    <Button
        android:id="@+id/btnSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Switch Color"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/livingroom_background"
        android:layout_marginStart="88dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="88dp" />



</android.support.constraint.ConstraintLayout>
