<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smarthome.menthacontrols.menthapp_client_new.activities.GarageActivity">

    <Button
        android:id="@+id/buttonBedroom"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:onClick="changeToBedroom"
        android:text="@string/bedroom_button"
        app:layout_constraintRight_toLeftOf="@+id/buttonUpstairs"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonUpstairs"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:onClick="changeToUpstairs"
        android:text="@string/upstairs_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonGarage"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="changeToGarage"
        android:text="@string/garage_button"
        app:layout_constraintLeft_toRightOf="@+id/buttonUpstairs"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonUtilities"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="9dp"
        android:background="@android:color/darker_gray"
        android:onClick="changeToUtilities"
        android:text="@string/utilities_button"
        app:layout_constraintLeft_toRightOf="@+id/buttonGarage"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLivingroom"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:onClick="changeToLivingroom"
        android:text="@string/living_room_button"
        app:layout_constraintRight_toLeftOf="@+id/buttonBedroom"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/livingroom_background"
        android:layout_width="780dp"
        android:layout_height="390dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/garage_description"
        android:scaleType="fitXY"
        android:src="@drawable/garage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUpstairs" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.button_subtypes.WallLampWidgetButton
        android:id="@+id/p_oli_k12"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toTopOf="@+id/livingroom_background"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="131dp"
        app:layout_constraintLeft_toLeftOf="@+id/livingroom_background" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.button_subtypes.WallLampWidgetButton
        android:id="@+id/p_oli_k7_1"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="102dp"
        app:layout_constraintLeft_toLeftOf="@+id/p_oli_k12"
        app:layout_constraintTop_toTopOf="@+id/p_oli_k12"
        android:layout_marginTop="16dp" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.button_subtypes.WallLampWidgetButton
        android:id="@+id/p_oli_k7_2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="102dp"
        app:layout_constraintLeft_toLeftOf="@+id/p_oli_k12"
        app:layout_constraintTop_toTopOf="@+id/p_oli_k12"
        android:layout_marginTop="141dp" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.button_subtypes.WallLampWidgetButton
        android:id="@+id/p_oli_k7b_1"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="426dp"
        app:layout_constraintLeft_toLeftOf="@+id/p_oli_k12"
        app:layout_constraintTop_toTopOf="@+id/p_oli_k12"
        android:layout_marginTop="-8dp" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.button_subtypes.WallLampWidgetButton
        android:id="@+id/p_oli_k7b_2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="426dp"
        app:layout_constraintLeft_toLeftOf="@+id/p_oli_k12"
        app:layout_constraintTop_toTopOf="@+id/p_oli_k12"
        android:layout_marginTop="133dp" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.button_subtypes.WallLampWidgetButton
        android:id="@+id/p_oli_45"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="384dp"
        app:layout_constraintLeft_toLeftOf="@+id/p_oli_k12"
        app:layout_constraintTop_toTopOf="@+id/p_oli_k12"
        android:layout_marginTop="98dp" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.button_subtypes.WallLampWidgetButton
        android:id="@+id/p_oli_10"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="419dp"
        app:layout_constraintLeft_toLeftOf="@+id/p_oli_k12"
        app:layout_constraintTop_toTopOf="@+id/p_oli_k12"
        android:layout_marginTop="278dp" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.button_subtypes.CeilingLampWidgetButton
        android:id="@+id/p_oli_42_1"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="156dp"
        app:layout_constraintLeft_toLeftOf="@+id/p_oli_k12"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/p_oli_k12" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.button_subtypes.CeilingLampWidgetButton
        android:id="@+id/p_oli_42_2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="296dp"
        app:layout_constraintLeft_toLeftOf="@+id/p_oli_k12"
        android:layout_marginTop="-7dp"
        app:layout_constraintTop_toBottomOf="@+id/p_oli_k12" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.button_subtypes.CeilingLampWidgetButton
        android:id="@+id/p_oli_42_3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="296dp"
        app:layout_constraintLeft_toLeftOf="@+id/p_oli_k12"
        android:layout_marginTop="85dp"
        app:layout_constraintTop_toBottomOf="@+id/p_oli_k12" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.button_subtypes.CeilingLampWidgetButton
        android:id="@+id/p_oli_42_4"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="156dp"
        app:layout_constraintLeft_toLeftOf="@+id/p_oli_k12"
        android:layout_marginTop="85dp"
        app:layout_constraintTop_toBottomOf="@+id/p_oli_k12" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.button_subtypes.CeilingLampWidgetButton
        android:id="@+id/p_oli_43"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="223dp"
        app:layout_constraintLeft_toLeftOf="@+id/p_oli_k12"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/p_oli_k12" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.button_subtypes.CeilingLampWidgetButton
        android:id="@+id/p_oli_41"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="331dp"
        app:layout_constraintLeft_toLeftOf="@+id/p_oli_k12"
        android:layout_marginTop="153dp"
        app:layout_constraintTop_toBottomOf="@+id/p_oli_k12" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.button_subtypes.CeilingLampWidgetButton
        android:id="@+id/p_oli_40"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="331dp"
        app:layout_constraintLeft_toLeftOf="@+id/p_oli_k12"
        android:layout_marginTop="208dp"
        app:layout_constraintTop_toBottomOf="@+id/p_oli_k12" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.button_subtypes.CeilingLampWidgetButton
        android:id="@+id/p_oli_44"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="242dp"
        app:layout_constraintLeft_toLeftOf="@+id/p_oli_k12"
        android:layout_marginTop="180dp"
        app:layout_constraintTop_toBottomOf="@+id/p_oli_k12" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.button_subtypes.CeilingLampWidgetButton
        android:id="@+id/p_oli_46"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="411dp"
        app:layout_constraintLeft_toLeftOf="@+id/p_oli_k12"
        android:layout_marginTop="153dp"
        app:layout_constraintTop_toBottomOf="@+id/p_oli_k12" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.button_subtypes.CeilingLampWidgetButton
        android:id="@+id/p_oli_8"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="488dp"
        app:layout_constraintLeft_toLeftOf="@+id/p_oli_k12"
        android:layout_marginTop="153dp"
        app:layout_constraintTop_toBottomOf="@+id/p_oli_k12" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.button_subtypes.CeilingLampWidgetButton
        android:id="@+id/p_oli_7"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="515dp"
        app:layout_constraintLeft_toLeftOf="@+id/p_oli_k12"
        android:layout_marginTop="215dp"
        app:layout_constraintTop_toBottomOf="@+id/p_oli_k12" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.button_subtypes.CeilingLampWidgetButton
        android:id="@+id/p_oli_k10"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="426dp"
        app:layout_constraintLeft_toLeftOf="@+id/p_oli_k12"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/p_oli_k12" />

    <com.smarthome.menthacontrols.menthapp_client_new.model.button_subtypes.FanWidgetButton
        android:id="@+id/p_ve3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="438dp"
        app:layout_constraintLeft_toLeftOf="@+id/p_oli_k12"
        android:layout_marginTop="199dp"
        app:layout_constraintTop_toBottomOf="@+id/p_oli_k12" />

</android.support.constraint.ConstraintLayout>
